src/parse/snapshots/protox__parse__tests__parse_message-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_message() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        body: MessageBody {
            items: [
                Field(
                    Field {
                        label: None,
                        name: Ident {
                            value: "a",
                            span: 34..35,
                        },
                        kind: Normal {
                            ty: Fixed32,
                            ty_span: 26..33,
                        },
                        number: Int {
                            negative: false,
                            value: 1,
                            span: 38..39,
                        },
                        options: None,
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 26..40,
                    },
                ),
                Field(
                    Field {
                        label: Some(
                            (
                                Optional,
                                53..61,
                            ),
                        ),
                        name: Ident {
                            value: "b",
                            span: 79..80,
                        },
                        kind: Map {
                            ty_span: 62..78,
                            key_ty: Int32,
                            key_ty_span: 66..71,
                            value_ty: Bool,
                            value_ty_span: 73..77,
                        },
                        number: Int {
                            negative: false,
                            value: 2,
                            span: 83..84,
                        },
                        options: None,
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 53..85,
                    },
                ),
                Field(
                    Field {
                        label: Some(
                            (
                                Optional,
                                99..107,
                            ),
                        ),
                        name: Ident {
                            value: "C",
                            span: 114..115,
                        },
                        kind: Group {
                            ty_span: 108..113,
                            body: MessageBody {
                                items: [
                                    Field(
                                        Field {
                                            label: Some(
                                                (
                                                    Required,
                                                    138..146,
                                                ),
                                            ),
                                            name: Ident {
                                                value: "d",
                                                span: 153..154,
                                            },
                                            kind: Normal {
                                                ty: Float,
                                                ty_span: 147..152,
                                            },
                                            number: Int {
                                                negative: false,
                                                value: 1,
                                                span: 157..158,
                                            },
                                            options: None,
                                            comments: Comments {
                                                leading_detached_comments: [],
                                                leading_comment: None,
                                                trailing_comment: None,
                                            },
                                            span: 138..159,
                                        },
                                    ),
                                ],
                                extensions: [],
                                options: [],
                                reserved: [],
                            },
                        },
                        number: Int {
                            negative: false,
                            value: 3,
                            span: 118..119,
                        },
                        options: None,
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 99..173,
                    },
                ),
                Oneof(
                    Oneof {
                        name: Ident {
                            value: "x",
                            span: 193..194,
                        },
                        options: [],
                        fields: [
                            Field {
                                label: None,
                                name: Ident {
                                    value: "y",
                                    span: 220..221,
                                },
                                kind: Normal {
                                    ty: String,
                                    ty_span: 213..219,
                                },
                                number: Int {
                                    negative: false,
                                    value: 4,
                                    span: 224..225,
                                },
                                options: None,
                                comments: Comments {
                                    leading_detached_comments: [],
                                    leading_comment: None,
                                    trailing_comment: None,
                                },
                                span: 213..226,
                            },
                        ],
                        comments: Comments {
                            leading_detached_comments: [],
                            leading_comment: None,
                            trailing_comment: None,
                        },
                        span: 187..240,
                    },
                ),
            ],
            extensions: [],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..250,
    },
)
