src/parse/snapshots/protox__parse__tests__parse_oneof-12.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Oneof {
        name: Ident {
            value: "Foo",
            span: 6..9,
        },
        options: [],
        fields: [
            Field {
                label: None,
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                kind: Normal {
                    ty: Named(
                        TypeName {
                            leading_dot: None,
                            name: FullIdent {
                                parts: [
                                    Ident {
                                        value: "oneof",
                                        span: 12..17,
                                    },
                                ],
                            },
                        },
                    ),
                    ty_span: 12..17,
                },
                number: Int {
                    negative: false,
                    value: 1,
                    span: 24..25,
                },
                options: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 12..26,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..28,
    },
)
