src/parse/snapshots/protox__parse__tests__parse_reserved-7.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        InvalidUtf8String {
            span: 9..15,
        },
        InvalidIdentifier {
            span: 9..15,
        },
    ],
)
