src/parse/snapshots/protox__parse__tests__parse_reserved.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_reserved() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Reserved {
        kind: Names(
            [
                Ident {
                    value: "foo",
                    span: 21..26,
                },
            ],
        ),
        comments: Comments {
            leading_detached_comments: [
                "detached\n",
            ],
            leading_comment: None,
            trailing_comment: Some(
                "trailing",
            ),
        },
        span: 12..27,
    },
)
