src/parse/snapshots/protox__parse__tests__parse_service-24.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        options: [],
        methods: [
            Method {
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                input_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "stream",
                                span: 29..35,
                            },
                        ],
                    },
                },
                output_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "stream",
                                span: 53..59,
                            },
                            Ident {
                                value: "stream",
                                span: 60..66,
                            },
                        ],
                    },
                },
                options: [],
                client_streaming: Some(
                    22..28,
                ),
                server_streaming: Some(
                    46..52,
                ),
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 14..68,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..70,
    },
)
