src/parse/snapshots/protox__parse__tests__parse_service-7.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_service() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Service {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        options: [],
        methods: [
            Method {
                name: Ident {
                    value: "bar",
                    span: 18..21,
                },
                input_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "A",
                                span: 22..23,
                            },
                        ],
                    },
                },
                output_ty: TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "B",
                                span: 34..35,
                            },
                            Ident {
                                value: "C",
                                span: 36..37,
                            },
                        ],
                    },
                },
                options: [],
                client_streaming: None,
                server_streaming: None,
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
                span: 14..42,
            },
        ],
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..44,
    },
)
